# verity-lock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  SECURITY.md  capacitor.config.ts  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  release.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/sp3/lock/: MainActivity.java  (+1 more)
android/app/src/main/res/values/: strings.xml
release/: .gitkeep
scripts/: build-linux.sh  build-portable-win.ps1  generate-banner.mjs  generate-icons.mjs  generate-screenshots.mjs
src/: App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  generator.rs  importer.rs  lib.rs  main.rs  state.rs  vault.rs
src/backend/: tauri.ts  web.ts
src/components/: Avatar.tsx  BottomNav.tsx  EntryRow.tsx  FilterPills.tsx  SettingsControls.tsx  Statusbar.tsx  StrengthBar.tsx  Toast.tsx  Topbar.tsx
src/hooks/: useAccountInput.ts  useAutoLock.ts  useClipboard.ts  useVault.ts
src/store/: importLock.ts
src/styles/: animations.css  globals.css  mobile.css  settings.css
src/utils/: crypto.ts  generator.ts  importer.ts  platform.ts  storage.ts  theme.ts
src/views/: DetailView.tsx  GeneratorView.tsx  ImportView.tsx  SettingsView.tsx  UnlockView.tsx  VaultView.tsx
(+2 files in other folders)
