[package]
name = "sp3-lock"
version = "1.0.0"
description = "sp3 Lock — portable offline password manager"
authors = ["sp3"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sp3_lock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
csv = "1"
quick-xml = "0.36"
# Pinned: time 0.3.48 ships a broken coherence impl that fails to compile on
# every rustc in its supported range (>=1.88). 0.3.47 is the newest good
# release that still satisfies plist's `time >=0.3.47` requirement. Remove this
# pin once a fixed time (>=0.3.49) is published.
time = "=0.3.47"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

